--- a/portfolio2/index.html
+++ b/portfolio2/index.html
@@ -17,7 +17,7 @@
           <nav id="main-nav">
             <ul>
                 <li href="#">ABOUT ME.</li>
-                <li href="#">WORK EXPERIENCE.</li>
+                <li href="work.html">WORK EXPERIENCE.</li>
                 <li href="#">PORTFOLIO.</li>
                 <li href="#">CONTACT.</li>
                 <li href="img/Resume.pdf">RESUME.</li>
