--- a/portfolio3/about.html
+++ b/portfolio3/about.html
@@ -13,7 +13,7 @@
                         <li><a href="index.html">HOME.</a></li>
                         <li><a href="work.html">WORK EXPERIENCE.</a></li>
                         <li><a href="#">PORTFOLIO.</a></li>
-                        <li><a href="#">CONTACT.</a></li>
+                        <li><a href="mailto:apvoigt77@gmail.com">CONTACT.</a></li>
                         <li><a href="img/Resume.pdf">RESUME.</a></li>
                     </ul>
                 </nav>
