--- a/portfolio3/index.html
+++ b/portfolio3/index.html
@@ -19,7 +19,7 @@
                 <li><a href="about.html">ABOUT ME.</a></li>
                 <li><a href="work.html">WORK EXPERIENCE.</a></li>
                 <li><a href="#">PORTFOLIO.</a></li>
-                <li><a href="#">CONTACT.</a></li>
+                <li><a href="mailto:apvoigt77@gmail.com">CONTACT.</a></li>
                 <li><a href="img/Resume.pdf">RESUME.</a></li>
             </ul>
         </nav>
